<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin_half"
        android:layout_marginEnd="@dimen/base_margin_half"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_layout_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_margin_half"
            android:background="@color/white"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColorHint="@color/colorPrimary"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fullname"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    style="@style/PersonNameEditText"
                    android:textColorHint="@color/colorPrimary"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_input_full_name">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="5dp"
                    android:text="@string/text_option_male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/text_option_female" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_gender">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_phonenumber"
                    style="@style/PhoneInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/handphone_number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_date_of_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_input_phone_number">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/hint_date_of_birth"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:drawableEnd="@drawable/ic_account_check_grey600_18dp"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_input_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/layout_input_date_of_birth">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email_address"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_policy_agreement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_agreement_policy"
                android:paddingStart="@dimen/base_margin_half"
                android:drawablePadding="@dimen/base_margin_half"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_input_email_address" />


            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_title_next_button"
                android:textStyle="bold"
                style="@style/LongRoundedButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_policy_agreement" />



        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>