<resources>
    <string name="app_name">Layouts &amp; Codes</string>
    <string name="login_instruction">This Is Login Page</string>
    <string name="welcome_message">This is welcome message</string>
    <string name="action_sign_in">Sign In</string>
    <string name="provide_to_register">Don\'t have an account? Register here</string>
    <string name="hint_email_address">email</string>
    <string name="hint_phone_number">phone number</string>
    <string name="text_title_profile">Profile</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_gender">Gender</string>
    <string name="text_option_male">Male</string>
    <string name="text_option_female">Female</string>
    <string name="handphone_number">Phone Number</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="text_membership_status">Membership Status</string>
    <string name="text_verification_code">Verification Code</string>
    <string name="text_insert_code">Insert code</string>
    <string name="text_verification_code_hint">Fill the verification code hint</string>
    <string name="text_resend_verification_code">Resend Verification Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_successful">Successful</string>
    <string name="text_change_pin_succeed_info">Your account pin has been changed</string>
    <string name="text_change_pin_succeed_info_desc">Additional Texts</string>
    <string name="action_ok">OK</string>
    <string name="text_insert_pin">Insert PIN</string>
    <string name="forgot_your_pin">Forgot Your PIN</string>
    <string name="text_action_cancel">Cancel</string>
    <string name="action_register">Expandable Form</string>
    <string name="text_agreement_policy">I Agree with Policy</string>
    <string name="text_title_next_button">Next</string>
    <string name="text_insert_pin_repeat">Repeat Insert Pin</string>
    <string name="text_info_create_pin">Info text</string>
    <string name="text_register_subtitle">Personal Info</string>
    <string name="text_title_create_pin">Create Pin</string>
    <string name="choose_image">Choose Image</string>
    <string name="text_toggle_member">Member</string>
    <string name="text_toggle_all">All</string>
    <string name="text_search_phone_number">Search</string>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bank_account">Bank Account</string>
    <string name="transfer">Tab Layout</string>
    <string name="text_home">Home</string>
    <string name="sample_info_text">sample information text</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="indonesian">Indonesian</string>
    <string name="english">English</string>
    <string name="setting_language">Language Setting</string>
    <string name="per_month">Mulai %1$s per Bulan</string>
    <string name="per_months">Mulai %1$s per %2$s Bulan</string>
</resources>
