...
        android:id="@+id/appbar_promo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_promo"
            app:toolbarId="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false"
            app:contentScrim="?attr/colorPrimary"
            app:statusBarScrim="@color/transparant"
...
