<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/base_margin_smallest"
    android:layout_marginStart="@dimen/base_margin_half"
    android:layout_marginEnd="@dimen/base_margin_half"
    android:layout_marginBottom="@dimen/base_margin_smallest"
    app:contentPadding="@dimen/base_padding"
    app:cardCornerRadius="@dimen/base_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/button_launcher"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="#FFFFFF"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="#7ab800"
            app:fb_focusColor="#9bd823"
            app:fb_fontIconResource="&#xf04b;"
            app:fb_iconPosition="left"
            app:fb_radius="30dp"
            app:fb_text="@string/action_sign_in"
            app:fb_textColor="#FFFFFF" />



    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>